Content overflow - multiple overflow containers in the same page, arrows padding fix

--- a/ui.apps/src/main/content/jcr_root/apps/hclecomm/components/content/container/clientlibs/less/containeroverflow.less
+++ b/ui.apps/src/main/content/jcr_root/apps/hclecomm/components/content/container/clientlibs/less/containeroverflow.less
@@ -38,7 +38,8 @@
     //end of arrows css
      @media only screen and (max-width: 500px) {
       .tns-controls {
-          margin-right:-30px;
+          margin-right: -45px;
+    	  padding-bottom: 5px;
         }
      }
       
